<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_200"
    tools:context=".activity.AboutUsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="4dp">

        <ImageView
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/app_version"
            android:textAlignment="center"
            android:textSize="13sp"
            android:textStyle="italic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="4dp"
            android:gravity="center_horizontal"
            android:text="@string/app_short_description"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_about_long_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="4dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="4dp"
            android:gravity="center"
            android:text="Find us here" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_about_dealdebt"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_margin="4dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_logo" />

            <ImageView
                android:id="@+id/iv_about_twitter"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_margin="4dp"
                android:contentDescription="@string/twitter"
                android:src="@drawable/ic_twitter_24dp" />

            <ImageView
                android:id="@+id/iv_about_facebook"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_margin="4dp"
                android:contentDescription="@string/facebook"
                android:src="@drawable/ic_facebook_24dp" />

            <ImageView
                android:id="@+id/iv_about_youtube"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_margin="4dp"
                android:contentDescription="@string/youtube"
                android:src="@drawable/ic_youtube_24dp" />

            <ImageView
                android:id="@+id/iv_about_instagram"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_margin="4dp"
                android:contentDescription="@string/instagram"
                android:src="@drawable/ic_instagram_24dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_about_pt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="4dp"
            android:gravity="center_horizontal"
            android:text="Privacy Policy and Terms Conditions"
            android:textAlignment="center"
            android:textColor="@drawable/txt_selector" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:gravity="center_horizontal"
            android:text="@string/app_copyright"
            android:textAlignment="center"
            android:textSize="12sp" />
    </LinearLayout>
</ScrollView>